qtbase-opensource-src (5.15.10+dfsg-5) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Add a patch to support LoongArch (closes: #1054569). Thanks Dandan Zhang!

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 05 Nov 2023 21:29:10 +0300

qtbase-opensource-src (5.15.10+dfsg-4) unstable; urgency=medium

  * Backport upstream patch to fix build with libxkbcommon 1.6.0.
  * Update symbols files from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 24 Oct 2023 14:07:10 +0300

qtbase-opensource-src (5.15.10+dfsg-3) unstable; urgency=medium

  [ Pino Toscano ]
  * Drop the support for the dead GNU/kFreeBSD:
    - drop the patches gnukfreebsd.diff, and nonlinux_utime.diff, as they only
      apply changes to that OS
      - drop installed files added by them
    - drop the kfreebsd-any qualifiers from the firebird-dev, and libgbm-dev
      build dependencies
    - drop the kfreebsd-any qualifiers from binary packages
    - drop the kfreebsd-any qualifiers in install files
    - drop the kfreebsd qualifiers in symbols files
  * More changes to symbols files:
    - set a symbol as linux-any, as it is Linux-specific
    - drop mips, and powerpcspe qualifiers, as those architectures are long dead
  * Remove 2 obsolete maintscript entries in 2 files.

  [ Dmitry Shachnev ]
  * Backport upstream patches to make QXmlStreamReaderPrivate::fastScanName
    indicate parsing status to callers (CVE-2023-37369).
  * Backport upstream patch to make QXmlStreamReader raise error on unexpected
    tokens (CVE-2023-38197, closes: #1041105).

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 27 Jul 2023 23:01:32 +0300

qtbase-opensource-src (5.15.10+dfsg-2) unstable; urgency=medium

  * Merge 5.15.8+dfsg-13 upload from unstable.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 08 Jul 2023 09:54:13 +0300

qtbase-opensource-src (5.15.10+dfsg-1) experimental; urgency=medium

  * New upstream release.