@@ -1,0 +1,142 @@
+.config.notes
+bin/qmake
+config.opt
+config.status
+config.tests/.qmake.cache
+config.tests/.qmake.stash
+config.tests/alloca_h/
+config.tests/arch/arch.target.txt
+config.tests/atomicfptr/atomicfptr.pro
+config.tests/atomicfptr/main.cpp
+config.tests/c11/
+config.tests/c99/
+config.tests/clock-monotonic/
+config.tests/cloexec/
+config.tests/conftest-out
+config.tests/conftest.cpp
+config.tests/cups/
+config.tests/cxx11_future/
+config.tests/cxx11_random/
+config.tests/cxx14/
+config.tests/cxx17/
+config.tests/dbus/
+config.tests/doubleconversion/
+config.tests/drm/
+config.tests/drm_atomic/
+config.tests/dtls/
+config.tests/egl-egldevice/
+config.tests/egl-mali-2/
+config.tests/egl-mali/
+config.tests/egl-viv/
+config.tests/egl-x11/
+config.tests/egl/
+config.tests/evdev/
+config.tests/eventfd/
+config.tests/fontconfig/
+config.tests/freetype/
+config.tests/futimens/
+config.tests/gbm/
+config.tests/getauxval/
+config.tests/getentropy/
+config.tests/getifaddrs/
+config.tests/glib/
+config.tests/glibc/
+config.tests/gssapi/
+config.tests/harfbuzz/
+config.tests/ibase/
+config.tests/icu/
+config.tests/inotify/
+config.tests/intelcet/
+config.tests/ipc_sysv/
+config.tests/ipv6ifname/
+config.tests/libatomic/
+config.tests/libdl/
+config.tests/libinput/
+config.tests/libinput_axis_api/
+config.tests/libjpeg/
+config.tests/libmd4c/
+config.tests/libpng/
+config.tests/librt/
+config.tests/libudev/
+config.tests/linkat/
+config.tests/linux-netlink/
+config.tests/linuxfb/
+config.tests/mtdev/
+config.tests/mysql/
+config.tests/ocsp/
+config.tests/odbc/
+config.tests/opengl/
+config.tests/openssl_headers/
+config.tests/pcre2/
+config.tests/posix_fallocate/
+config.tests/posix_iconv/
+config.tests/ppoll/
+config.tests/precompile_header/
+config.tests/psql/
+config.tests/reduce_exports/
+config.tests/reduce_relocations/
+config.tests/renameat2/
+config.tests/signaling_nan/
+config.tests/sqlite3/
+config.tests/statx/
+config.tests/tds/
+config.tests/vulkan/
+config.tests/xcb/
+config.tests/xcb_glx/
+config.tests/xcb_syslibs/
+config.tests/xcb_xinput/
+config.tests/xcb_xlib/
+config.tests/xkbcommon/
+config.tests/xkbcommon_x11/
+config.tests/xlib/
+config.tests/xrender/
+config.tests/zlib/
+config.tests/zstd/
+doc/*.qch
+doc/html/
+doc/qch/
+doc/qmake/
+doc/qtconcurrent/
+doc/qtcore/
+doc/qtdbus/
+doc/qtgui/
+doc/qtnetwork/
+doc/qtopengl/
+doc/qtplatformheaders/
+doc/qtprintsupport/
+doc/qtsql/
+doc/qttestlib/
+doc/qtwidgets/
+doc/qtxml/
+examples/dbus/*/Makefile.*
+lib/
+mkspecs/qconfig.pri
+plugins/
+qmake/codeattributions.qdoc
+src/*/*-config.h
+src/*/*-config.pri
+src/*/*-config_p.h
+src/*/*.version.in
+src/*/codeattributions.qdoc
+src/corelib/.tracegen/qtcore_tracepoints_p.h
+src/corelib/global/qconfig.*
+src/gui/.tracegen/qtgui_tracepoints_p.h
+src/plugins/platforms/eglfs/QtEglFSDeviceIntegration.version
+src/plugins/platforms/eglfs/deviceintegration/eglfs_kms_support/QtEglFsKmsSupport.version
+src/plugins/platforms/xcb/QtXcbQpa.version
+src/plugins/sqldrivers/qtsqldrivers-config.h
+src/plugins/sqldrivers/qtsqldrivers-config.pri
+src/plugins/sqldrivers/qtsqldrivers-config_p.h
+src/widgets/.tracegen/qtwidgets_tracepoints_p.h
+tests/auto/cmake/mockplugins/mockplugins1/QtMockPlugins1.version.in
+tests/auto/cmake/mockplugins/mockplugins2/QtMockPlugins2.version.in
+tests/auto/cmake/mockplugins/mockplugins3/QtMockPlugins3.version.in
+tests/auto/corelib/kernel/qcoreapplication/target_wrapper.sh
+tests/auto/corelib/mimetypes/qmimedatabase/qmimedatabase-cache/target_wrapper.sh
+tests/auto/corelib/mimetypes/qmimedatabase/qmimedatabase-xml/target_wrapper.sh
+tests/auto/gui/kernel/qguiapplication/target_wrapper.sh
+tests/auto/network/selftest/target_wrapper.sh
+tests/auto/tools/moc/allmocs.qrc
+util/corelib/qurl-generateTLDs/effective_tld_names.dat.qt
+util/corelib/qurl-generateTLDs/effective_tld_names.dat.trimmed
+util/corelib/qurl-generateTLDs/qurl-generateTLDs
