@@ -138,26 +138,6 @@ override_dh_auto_clean:
 
 	# Extra stuff missed by confclean/distclean
 
-	# Misc. files
-	rm -f \
-	  config.status \
-	  config.tests/.qmake.cache \
-	  examples/dbus/*/Makefile.* \
-	  mkspecs/qconfig.pri \
-	  src/corelib/global/qconfig.* \
-	;
-
-	# Misc. directories
-	rm -rf \
-	  doc-build/ \
-	  doc/html/ \
-	  doc/qch/ \
-	  examples/tools/plugandpaint/plugins/ \
-	  examples/tools/styleplugin/styles/ \
-	  lib/ \
-	  plugins/ \
-	;
-
 	# Leftover dirs
 	find -depth -type d \( -false \
 	  -o -name debug-shared \
@@ -196,12 +176,6 @@ override_dh_auto_clean:
 	find $(CURDIR) -type f -perm /u+x,g+x,o+x -exec file -i '{}' \; \
 	| grep -e application/x-executable \
 	| cut -d ':' -f 1 | xargs rm -f
-
-	# Generated on build
-	rm -vf debian/stamp-makefile-build-tools
-
-	# more leftovers
-	rm -f .device.vars .qmake.vars
 
 override_dh_auto_build-indep:
 	dh_auto_build -- docs
