@@ -1,0 +1,1 @@
+extend-diff-ignore = "^src/corelib/io/qurltlds_p\.h$"
