@@ -2,6 +2,7 @@ qtbase-opensource-src (5.15.10+dfsg-5) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Add a patch to support LoongArch (closes: #1054569). Thanks Dandan Zhang!
+  * Add a debian/clean file (closes: #1048743).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 05 Nov 2023 21:29:10 +0300
 
